add usage and options for en and de

--- a/lib/ripl/i18n/locales/en.yml
+++ b/lib/ripl/i18n/locales/en.yml
@@ -13,3 +13,5 @@ load_rc: Error while loading %s
 parse_option: invalid option
 prompt: Error while creating prompt
 print_result: Error while printing result
+usage: Usage
+options: Options
