--- a/lib/ripl/i18n/locales/de.yml
+++ b/lib/ripl/i18n/locales/de.yml
@@ -12,3 +12,5 @@ load_rc: Fehler beim Laden von %s
 parse_option: Ungültige Option
 prompt: Fehler beim Erstellen des Prompts
 print_result: Fehler beim Ergebnis ausgeben
+usage: Benutzung
+options: Optionen
