--- a/lib/ripl/i18n/locales/es.yml
+++ b/lib/ripl/i18n/locales/es.yml
@@ -12,3 +12,7 @@ load_rc: Ocurrió un error mientras cargando %s
 parse_option: opción inválida
 prompt: Ocurrió un error mientras creando prompt
 print_result: Ocurrió un error impremiendo el resultado
+usage: Uso
+options: Opciónes
+args: ARGUMENTOS
+command: COMANDO
