--- a/lib/ripl/i18n/locales/en.yml
+++ b/lib/ripl/i18n/locales/en.yml
@@ -1,5 +1,4 @@
-# Keys and their words to translate into other languages
---- 
+---
 -f: Suppress loading ~/.irbrc
 -F: Suppress loading ~/.riplrc
 -d: Set $DEBUG to true (same as `ruby -d')
@@ -7,7 +6,7 @@
 -r: Require file (same as `ruby -r')
 -v: Print version
 -h: Print help
-run_command: `%s' is not a %s command.
+run_command: ! '`%s'' is not a %s command.'
 start: Unused arguments
 load_rc: Error while loading %s
 parse_option: invalid option
