--- a/lib/ripl/i18n/locales/ja.yml
+++ b/lib/ripl/i18n/locales/ja.yml
@@ -8,7 +8,7 @@
 -h: ヘルプを表示
 run_command: ! '`%s'' は %s コマンドではありません。'
 start: 未使用の引数です。
-load_rc: %s をロード中にエラーが発生しました。
+load_rc: ! '%s をロード中にエラーが発生しました。'
 parse_option: 不正なオプションです。
 prompt: プロンプトを作成中にエラーが発生しました。
 print_result: 結果をプリント中にエラーが発生しました。
